💻 feat: Adds responsiveness

--- a/login.html
+++ b/login.html
@@ -24,9 +24,10 @@
           <div class="login__image">
             <img src="./assets/images/img-login.png" alt="starcatcher" />
           </div>
-
           <div class="form__container">
-            <h1 class="login__title">Acessar o Starcatcher Portfólio</h1>
+            <h1 class="login__title">
+              Acessar o Starcatcher <span>Portfólio</span>
+            </h1>
             <button class="login__button-google">
               <img
                 class="google__icon"
@@ -53,7 +54,7 @@
                   required
                 />
               </label>
-
+              <div></div>
               <label for="">
                 Password
                 <input
