✨ feat: Add function to typ feat:

--- a/login.html
+++ b/login.html
@@ -25,9 +25,7 @@
             <img src="./assets/images/img-login.png" alt="starcatcher" />
           </div>
           <div class="form__container">
-            <h1 class="login__title">
-              Acessar o Starcatcher <span>Portfólio</span>
-            </h1>
+            <h1 class="login__title" id="title"></h1>
             <button class="login__button-google">
               <img
                 class="google__icon"
